syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.Books";

message Book {
    int32 id = 1;
    google.protobuf.Timestamp creationDate = 2;
    google.protobuf.Timestamp modificationDate = 3;
    int32 creationUserId = 4;
    int32 modificationUserId = 5;
    string name = 6;
    string synonym = 7;
    bool hidden = 8;
    string cover = 9;
}

message BookPageModel {
    repeated Book pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}